# fc-catalogo-videos-python

./: .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.docker/: start_app.sh
.history/: Dockerfile_20230220110545  Dockerfile_20230220110551  Dockerfile_20230220110602  Dockerfile_20230220110604  Dockerfile_20230220110616  Dockerfile_20230220110622  Dockerfile_20230220110631  Dockerfile_20230220110636  Dockerfile_20230220110649  Dockerfile_20230220110652  Dockerfile_20230220110700  Dockerfile_20230220110714  Dockerfile_20230220110805  Dockerfile_20230220110826  Dockerfile_20230220110829  Dockerfile_20230220110834  Dockerfile_20230220110836  Dockerfile_20230220110837  Dockerfile_20230220110842  Dockerfile_20230220110845  Dockerfile_20230220110850  Dockerfile_20230220110857  Dockerfile_20230220110900  docker-compose_20230220110945.yaml  docker-compose_20230220110948.yaml  docker-compose_20230220110959.yaml  docker-compose_20230220111001.yaml
src/__seedwork/application/: dto.py  use_case.py
src/__seedwork/domain/: entities.py  exceptions.py  repositories.py  value_objects.py
src/__seedwork/entities/: entities.py
src/category/application/: dto.py  use_cases.py
src/category/domain/: entities.py  repositories.py  validators.py
src/category/infra/: repositories.py
src/category/tests/domain/: test_entities.py
src/core/__seedwork/application/: dto.py  use_case.py
src/core/__seedwork/domain/: entities.py  exceptions.py  repositories.py  value_objects.py
src/core/category/application/: dto.py  use_cases.py
src/core/category/domain/: entities.py  repositories.py  validators.py
src/core/category/infra/django/: admin.py  (+1 more)
src/django_app/: settings.py
uml/: class-diagram.wsd
uml/usecases/: category.usecase.wsd
(+25 files in other folders)
