[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pylint>=2.16.2",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Samuel Barbosa", email = "contato@smkbarbosa.eti.br"},
]
dependencies = []
requires-python = ">=3.10.2"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
