[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pylint>=2.16.2",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Samuel Barbosa", email = "contato@smkbarbosa.eti.br"},
]
dependencies = [
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "black>=23.1.0",
    "djangorestframework>=3.14.0",
    "pytest>=7.2.1",
]
requires-python = ">=3.10.2"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
