[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pylint>=2.16.2",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Samuel Barbosa", email = "contato@smkbarbosa.eti.br"},
]
dependencies = [
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "black>=23.1.0",
    "djangorestframework>=3.14.0",
    "pytest>=7.2.1",
]


requires-python = ">=3.10.2"
license = {text = "MIT"}

[project.optional-dependencies]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=1.6.0",
    "pylint>=2.13.0",
    "pytest>=7.1.1",
]
[tool.pdm.scripts]
pep8 = "autopep8 --in-place --recursive ./src"
pylint = "pylint ./src"
test = "pytest --ignore __pypackages__"
test_cov = "pdm run test --cov ./src --cov-fail-under 80"
test_cov_html = "pdm run test_cov --cov-report html:./__coverage"


[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
